--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "team-challenge",
+  "name": "Lichess Tweaked Challenge Accept",
   "description": "A vue.js web extension that allows choosing by team",
   "version": "1.0.0",
   "manifest_version": 2,
@@ -8,7 +8,7 @@
     "128": "icons/icon_128.png"
   },
   "browser_action": {
-    "default_title": "team-challenge"
+    "default_title": "Team Challenge"
   },
   "content_scripts": [
     {
