--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:dev": "cross-env NODE_ENV=development webpack --hide-modules",
     "build-zip": "node scripts/build-zip.js",
     "watch": "npm run build -- --watch",
-    "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
+    "watch:dev": "cross-env HMR=true npm run build:dev -- --watch",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -39,6 +40,7 @@
     "@babel/runtime-corejs3": "^7.12.1",
     "archiver": "^3.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^26.6.1",
     "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^5.1.2",
     "core-js": "^3.0.1",
@@ -58,6 +60,7 @@
     "eslint-plugin-vue": "^6.0.1",
     "file-loader": "^5.0.2",
     "husky": "^2.4.0",
+    "jest": "^26.6.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.9.3",
     "prettier": "^1.17.1",
