--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "dot": "^1.1.3",
     "jQuery-QueryBuilder": "^2.5.2",
     "jquery": "^3.5.1",
-    "vue": "^2.6.12",
-    "vuex": "^3.5.1",
+    "vue": "^3.0.2",
+    "vuex": "^4.0.0-rc.1",
     "webextension-polyfill": "^0.3.1"
   },
   "devDependencies": {
