Switch to vue3 and typescript

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "@babel/plugin-proposal-optional-chaining"
   ],
   "presets": [
+    "@vue/cli-plugin-babel/preset",
     ["@babel/preset-env", {
       "useBuiltIns": "usage",
       "corejs": 3,
