--- a/package.json
+++ b/package.json
@@ -3,25 +3,16 @@
   "version": "1.1.0",
   "description": "A vue.js web extension that allows choosing by team",
   "author": "Lucas Manzke",
-  "license": "MIT",
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
-    "lint": "eslint --ext .js,.vue src",
+    "build": "cross-env NODE_ENV=production webpack --hide-modules",
+    "lint": "eslint --ext .js,.vue,.ts src",
+    "build-zip": "node scripts/build-zip.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --hide-modules",
     "prettier": "prettier \"src/**/*.{js,vue}\"",
     "prettier:write": "npm run prettier -- --write",
-    "build": "cross-env NODE_ENV=production webpack --hide-modules",
-    "build:dev": "cross-env NODE_ENV=development webpack --hide-modules",
-    "build-zip": "node scripts/build-zip.js",
+    "test": "jest",
     "watch": "npm run build -- --watch",
-    "watch:dev": "cross-env HMR=true npm run build:dev -- --watch",
-    "test": "jest"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+    "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -38,6 +29,18 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/runtime-corejs3": "^7.12.5",
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "@vue/cli-plugin-typescript": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/compiler-sfc": "^3.0.2",
     "archiver": "^3.0.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
@@ -47,7 +50,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.4.0",
     "ejs": "^2.6.1",
-    "eslint": "^6.6.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
@@ -57,7 +60,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-vue": "^7.1.0",
     "file-loader": "^5.0.2",
     "husky": "^2.4.0",
     "jest": "^26.6.3",
@@ -66,11 +69,21 @@
     "prettier": "^1.17.1",
     "pretty-quick": "^1.8.0",
     "sass-loader": "^7.1.0",
-    "vue-loader": "^15.9.5",
-    "vue-template-compiler": "^2.6.12",
+    "typescript": "~3.9.3",
+    "vue-eslint-parser": "^7.1.1",
+    "vue-loader": "^16.0.0-rc.2",
     "web-ext-types": "^2.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.10",
     "webpack-extension-reloader": "^1.1.0"
-  }
+  },
+  "engines": {
+    "node": ">=10"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "license": "MIT"
 }
