--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.5.3",
     "dot": "^1.1.3",
+    "fp-ts": "^2.8.6",
     "jQuery-QueryBuilder": "^2.5.2",
     "jquery": "^3.5.1",
     "vue": "^3.0.2",
@@ -32,15 +33,15 @@
     "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
-    "@vue/cli-plugin-typescript": "^4.5.9",
-    "@vue/cli-service": "^4.5.9",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/compiler-sfc": "^3.0.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/compiler-sfc": "^3.0.2",
     "archiver": "^3.0.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
@@ -69,6 +70,7 @@
     "prettier": "^1.17.1",
     "pretty-quick": "^1.8.0",
     "sass-loader": "^7.1.0",
+    "ts-jest": "^26.4.4",
     "typescript": "~3.9.3",
     "vue-eslint-parser": "^7.1.1",
     "vue-loader": "^16.0.0-rc.2",
