--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "plugins": [
-    "@babel/plugin-proposal-optional-chaining"
+    "@babel/plugin-proposal-optional-chaining",
   ],
   "presets": [
     "@vue/cli-plugin-babel/preset",
@@ -8,7 +8,6 @@
       "useBuiltIns": "usage",
       "corejs": 3,
       "targets": {
-        // https://jamie.build/last-2-versions
         "browsers": ["> 0.25%", "not ie 11", "not op_mini all"]
       }
     }]
