--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dot": "^1.1.3",
     "fp-ts": "^2.8.6",
     "jQuery-QueryBuilder": "^2.5.2",
+    "jpex": "^4.1.0",
     "jquery": "^3.5.1",
     "vue": "^3.0.2",
     "vuex": "^4.0.0-rc.1",
@@ -31,6 +32,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/runtime-corejs3": "^7.12.5",
     "@types/jest": "^26.0.15",
+    "@types/jquery": "^3.5.4",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "@vue/cli-plugin-babel": "~4.5.0",
