--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.5.3",
     "dot": "^1.1.3",
     "fp-ts": "^2.8.6",
+    "immutable": "^4.0.0-rc.12",
     "jQuery-QueryBuilder": "^2.5.2",
     "jpex": "^4.1.0",
     "jquery": "^3.5.1",
@@ -45,6 +46,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "archiver": "^3.0.0",
+    "axios-mock-adapter": "^1.19.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
