--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
   "plugins": [
-    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-optional-chaining"
   ],
   "presets": [
-    "@vue/cli-plugin-babel/preset",
+    ["@vue/cli-plugin-babel/preset", {
+      "modules": false
+    }],
     ["@babel/preset-env", {
+      "modules": false,
       "useBuiltIns": "usage",
       "corejs": 3,
       "targets": {
