--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "pretty-quick": "^1.8.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^26.4.4",
-    "typescript": "~3.9.3",
+    "typescript": "^4.1.3",
     "vue-eslint-parser": "^7.1.1",
     "vue-loader": "^16.0.0-rc.2",
     "web-ext-types": "^2.1.0",
