--- a/package.json
+++ b/package.json
@@ -16,42 +16,42 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "dot": "^1.1.3",
-    "fp-ts": "^2.8.6",
+    "fp-ts": "^2.9.3",
     "immutable": "^4.0.0-rc.12",
     "jQuery-QueryBuilder": "^2.5.2",
-    "jpex": "^4.1.0",
+    "jpex": "^4.3.0",
     "jquery": "^3.5.1",
-    "vue": "^3.0.2",
-    "vuex": "^4.0.0-rc.1",
+    "vue": "^3.0.5",
+    "vuex": "^4.0.0-rc.2",
     "webextension-polyfill": "^0.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/preset-env": "^7.12.11",
     "@babel/runtime-corejs3": "^7.12.5",
-    "@types/jest": "^26.0.15",
-    "@types/jquery": "^3.5.4",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "^4.5.9",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "^4.5.9",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@types/jest": "^26.0.20",
+    "@types/jquery": "^3.5.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
+    "@vue/cli-plugin-vuex": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
+    "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "archiver": "^3.0.0",
     "axios-mock-adapter": "^1.19.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^5.1.2",
-    "core-js": "^3.7.0",
+    "core-js": "^3.8.3",
     "cross-env": "^5.2.0",
     "css-loader": "^3.4.0",
     "ejs": "^2.6.1",
@@ -62,10 +62,10 @@
     "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^7.1.0",
+    "eslint-plugin-vue": "^7.5.0",
     "file-loader": "^5.0.2",
     "husky": "^2.4.0",
     "jest": "^26.6.3",
@@ -74,12 +74,12 @@
     "prettier": "^1.17.1",
     "pretty-quick": "^1.8.0",
     "sass-loader": "^7.1.0",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3",
-    "vue-eslint-parser": "^7.1.1",
-    "vue-loader": "^16.0.0-rc.2",
+    "vue-eslint-parser": "^7.4.1",
+    "vue-loader": "^16.1.2",
     "web-ext-types": "^2.1.0",
-    "webpack": "^5.18.0",
+    "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
     "webpack-extension-reloader": "^1.1.4"
   },
