--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "lint": "eslint --ext .js,.vue,.ts src",
+    "lint-fix": "eslint --fix --ext .js,.vue,.ts src",
     "build-zip": "node scripts/build-zip.ts",
     "build:dev": "cross-env NODE_ENV=development webpack",
     "prettier": "prettier \"src/**/*.{js,vue}\"",
