--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Lichess Tweaked Challenge Accept",
   "description": "A vue.js web extension that allows choosing by challenges based on certain conditions",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "manifest_version": 2,
   "icons": {
     "48": "icons/icon_48.png",
@@ -17,13 +17,9 @@
       "css": ["challenge/challenge.css"]
     }
   ],
-  "permissions": [
-    "storage"
-  ],
+  "permissions": ["storage"],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "scripts": ["background.js"]
   },
   "options_ui": {
     "page": "options/options.html",
