--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "team-challenge",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A vue.js web extension that allows choosing by team",
   "author": "Lucas Manzke",
   "scripts": {
@@ -16,8 +16,10 @@
     "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
   },
   "dependencies": {
+    "awesome-bootstrap-checkbox": "0.3.7",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^3.4.1",
+    "bootstrap-select": "^1.13.18",
     "dot": "^1.1.3",
     "fp-ts": "^2.9.3",
     "immutable": "^4.0.0-rc.12",
